# SmartNotes

./: .dockerignore  .gitignore  CHANGELOG.md  CHANGES_VERIFICATION.md  COLLEGE_PROJECT_README.md  COMPLETION_CHECKLIST.md  COMPREHENSIVE_IMPROVEMENTS.md  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_SUMMARY.md  DOCUMENTATION_INDEX.md  Dockerfile  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_IMPLEMENTED.md  IMPROVEMENTS_SUMMARY.md  LM_GENERATION_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  READY_FOR_COLLEGE.sh  REPOSITORY_STRUCTURE.md  REPO_IMPROVEMENTS.md  SETUP_GUIDE.md  START_HERE.md  SYSTEM_ARCHITECTURE.md  __init__.py  batch_ocr.py  batch_ocr_processor.py  config.py  config_fix.py  debug_model_shapes.py  debug_ocr.py  decode_with_lm.py  diagnose_image.py  diagnose_segmentation.py  diagnostics.py  docker-compose.yml  (+20 more)
docs/: GRADIO_INTERFACE_SETUP.md  HANDWRITTEN_NOTES_INTEGRATION.md  NOTES_INTEGRATION_CHANGES.txt  NOTES_INTEGRATION_GUIDE.md  NOTES_INTEGRATION_SUMMARY.md
lm/: smartnotes.arpa  smartnotes_corpus.txt  smartnotes_python.arpa
ocr_results/: 279_DBMS Complete1_removed_page000.txt  279_DBMS Complete1_removed_page001.txt  279_DBMS Complete1_removed_page002.txt  279_DBMS Complete1_removed_page003.txt  279_DBMS Complete1_removed_page004.txt  279_DBMS Complete1_removed_page005.txt  279_DBMS Complete1_removed_page006.txt  279_DBMS Complete1_removed_page007.txt  279_DBMS Complete1_removed_page008.txt  279_DBMS Complete1_removed_page009.txt  279_DBMS Complete1_removed_page010.txt  279_DBMS Complete1_removed_page011.txt  279_DBMS Complete1_removed_page012.txt  279_DBMS Complete1_removed_page013.txt  279_DBMS Complete1_removed_page014.txt  279_DBMS Complete1_removed_page015.txt  279_DBMS Complete1_removed_page016.txt  279_DBMS Complete1_removed_page017.txt  279_DBMS Complete1_removed_page018.txt  279_DBMS Complete1_removed_page019.txt  279_DBMS Complete1_removed_page020.txt  279_DBMS Complete1_removed_page021.txt  279_DBMS Complete1_removed_page022.txt  279_DBMS Complete1_removed_page023.txt  279_DBMS Complete1_removed_page024.txt  279_DBMS Complete1_removed_page025.txt  279_DBMS Complete1_removed_page026.txt  279_DBMS Complete1_removed_page027.txt  279_DBMS Complete1_removed_page028.txt  279_DBMS Complete1_removed_page029.txt  279_DBMS Complete1_removed_page030.txt  279_DBMS Complete1_removed_page031.txt  279_DBMS Complete1_removed_page032.txt  279_DBMS Complete1_removed_page033.txt  279_DBMS Complete1_removed_page034.txt  279_DBMS Complete1_removed_page035.txt  279_DBMS Complete1_removed_page036.txt  279_DBMS Complete1_removed_page037.txt  279_DBMS Complete1_removed_page038.txt  279_DBMS Complete1_removed_page039.txt  (+4564 more)
preprocessing/: __init__.py  init.py  line_segment.py  pipeline.py  postprocess.py  recognize.py  subject_classifier.py  test_preprocessing.py  text_preprocess.py  utils.py
results/: analyze_predictions.py  ocr_stage2_predictions.csv
scripts/: GRADIO_INTERFACE_GUIDE.md  __init__.py  arpa_generator.py  example_notes_integration.py  extract_printed_notes.py  generate_lm.py  (+2 more)
(+26 files in other folders)
