[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartnotes-ocr"
version = "1.0.0"
description = "Intelligent Handwritten Text Recognition System using CRNN + CTC"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "SmartNotes Contributors", email = "contributors@smartnotes.local"}
]
keywords = ["ocr", "handwriting", "recognition", "deep-learning", "pytorch", "crnn", "ctc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "torch>=2.1.2",
    "torchvision>=0.16.2",
    "numpy>=1.24.3",
    "opencv-python>=4.8.1.78",
    "Pillow>=10.0.1",
    "tqdm>=4.66.1",
    "scikit-learn>=1.3.2",
    "matplotlib>=3.8.2",
    "editdistance>=0.8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
]
lm = [
    "pyctcdecode>=0.5.0",
    "kenlm>=2020.12.17",
]
ui = [
    "gradio>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Kanike-tea/SmartNotes"
"Bug Tracker" = "https://github.com/Kanike-tea/SmartNotes/issues"
Documentation = "https://github.com/Kanike-tea/SmartNotes#readme"
"Source Code" = "https://github.com/Kanike-tea/SmartNotes"

[project.scripts]
smartnotes-train = "src.training.train_ocr:main"
smartnotes-infer = "src.inference.test_ocr:main"

[tool.setuptools]
packages = ["src", "preprocessing", "tests"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
  | datasets
  | checkpoints
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["*/migrations/*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src", "preprocessing"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
